--- a/components/9/component.html
+++ b/components/9/component.html
@@ -13,7 +13,7 @@
     <section>
         <p>Subscribe to our newsletter to receive news, updates, and another stuff by email.:</p>
         <form>
-            <p><input type="email" name="name" placeholder="Enter your email..." /></p>
+            <p><label>Email</label><input type="email" name="name" placeholder="Enter your email..." /></p>
             <p><input type="submit" name="submit" value="Subscribe" /></p>
         </form>
     </section>
