--- a/components/1/component.html
+++ b/components/1/component.html
@@ -21,14 +21,14 @@
         </ul>
     </nav>
     <header>
-        <article>
+        <section>
             <img src="images/soloLogo.svg" alt="Solo Logo">
             <h1>Freelancing's tough. Luckily you've just found your wingman.</h1>
             <p>Scroll Down</p>
             
-        </article>
+        </section>
         
-        <article>
+        <section>
             <p><a href="#">Take a Free Trial</a></p>
             <ul>
                 <li><a href="http://www.dribbble.com">Dribbble</a></li>
@@ -37,7 +37,7 @@
                 <li><a href="http://www.twitter.com">Twitter</a></li>
                 <li><a href="http://www.facebook.com">Facebook</a></li>
             </ul>
-        </article>
+        </section>
     </header>
     
     
