--- a/components/2/component.css
+++ b/components/2/component.css
@@ -28,23 +28,22 @@ section::after {
     clear: both;
 }
 
-li {
+ul {
     text-align: center;
-    float: left;
-    width: 100px;
-    margin-right: 10rem;
+}
+
+li {
+    display: inline-block;
+    width: calc(100%/3);
 }
     
 li a {
     padding-top: 12rem;
-    display: inline-block;
+    width: calc(100%/3);
+    display: block;
 }
 
-li a:last-child {
-    margin-right: 0;
-}
-
-li:hover {
+li a:hover {
     border-radius: 50%;
     background: rgba(31, 56, 186, .4);
     box-shadow: inset 0 0 0 5px rgba(31, 56, 186, .8);
