--- a/components/4/component.html
+++ b/components/4/component.html
@@ -7,6 +7,8 @@
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="font-awesome.min.css" />
+        <link rel="stylesheet" href="css/jquery-ui.min.css">
+    <link rel="stylesheet" href="css/jquery-ui.structure.min.css">
 </head>
 <body>
 
@@ -16,7 +18,7 @@
         <p>Yoda soon you will call me master Fovernor Tarkin. A new hope Boba Fett bantha forest moon. Tusken raider Master Yoda do or do not never tell me the odds.</p>
         <button><p></p></button>
         
-        <form>
+        <form id="form">
             <p><label for="name">Name</label><input type="text" name="name" /></p>
             <p><label for="email">Email</label><input type="email" name="email" /></p>
             <p><label for="subject">Subject</label><input type="text" name="subject" /></p>
@@ -27,6 +29,8 @@
 	
 
 	<!-- End Component -->
-	
+	<script src="js/jquery-ui.min.js"></script>  
 </body>
+    
+  
 </html>
