--- a/components/4/component.html
+++ b/components/4/component.html
@@ -16,7 +16,7 @@
     <section>
         <h2>Contact</h2>
         <p>Yoda soon you will call me master Fovernor Tarkin. A new hope Boba Fett bantha forest moon. Tusken raider Master Yoda do or do not never tell me the odds.</p>
-        <button><p></p></button>
+        <button id="dropForm"><p></p></button>
         
         <form id="form">
             <p><label for="name">Name</label><input type="text" name="name" /></p>
@@ -29,7 +29,10 @@
 	
 
 	<!-- End Component -->
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+
 	<script src="js/jquery-ui.min.js"></script>  
+    <script src="js/component.js"></script>
 </body>
     
   
