--- a/components/6/component.html
+++ b/components/6/component.html
@@ -4,6 +4,8 @@
 	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,300italic,300,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="font-awesome.min.css" />
 </head>
 <body>
 
@@ -11,26 +13,18 @@
     <section>
         <article>
             <h2>How to enable or disable safe mode in HTC one M8: Easy Way</h2>
-            <img src="" alt="" />
-            <p>354 shares</p>
+            <img src="images/phone.png" alt="HTC Phone" />
+            
             <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><button><img src="" alt="More"></button></li>
+                <li><p><span>354</span> shares</p></li>
+                <li><a href="http://www.facebook.com">Facebook</a></li>
+                <li><a href="http://www.twitter.com">Twitter</a></li>
+                <li><button>+</button></li>
             </ul>
             <p>HTC One M8 is a premiere smartphone from HTC that delivers the best performance and class apart features as compared to most of the latest Android Smartphone's available out there in the market.</p>
         </article>
-        <article>
-            <h2>How to enable or disable safe mode in HTC one M8: Easy Way</h2>
-            <img src="" alt="" />
-            <p>354 shares</p>
-            <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><button><img src="" alt="More"></button></li>
-            </ul>
-            <p>HTC One M8 is a premiere smartphone from HTC that delivers the best performance and class apart features as compared to most of the latest Android Smartphone's available out there in the market.</p>
-        </article>
+        
+        
     </section>
 
 
