--- a/components/10/component.css
+++ b/components/10/component.css
@@ -2,7 +2,73 @@
 ================================================================================
 COMPONENT STYLESHEET
 ================================================================================ */
+html { font-size: 62.5%; }
+body {
+    font: 1.6rem/1.4 'Raleway', sans-serif;  
+    max-width: 960px;
+    margin: 5rem auto;
+}
 
 /* HEADER ======================================== */
 
-/* HEADER ======================================== */
+section {
+    text-align: center;
+}
+
+h1 {
+    font-size: 3rem;
+    font-weight: 700;
+    color: #888;
+    margin-bottom: 3rem;
+}
+
+ul {
+    width: 60%;
+    background-color: #f9f9f9;
+    text-align: center;
+    margin: 3rem auto;
+    padding: 2rem 3rem 5rem;
+}
+
+li {
+    display: inline-block;
+    float: left;
+    width: 25%;
+}
+
+
+li a {
+    background: #fff;
+    display: block;
+    color: #46b4e5;
+    font-size: 1.5rem;
+    margin-right: 2%;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 3% 3% 2% 3%;
+}
+
+div {
+    width: 30%;
+    margin: 0 auto;
+    color: #fff;
+    font-size: 2rem;
+    height: 6rem;
+    background: #46b4e5;
+}
+
+.ui-widget-header {
+    border: 1px solid #aaa;
+    background: #e76bc3!important;
+    color: #222;
+    font-weight: bold;
+}
+
+.ui-progressbar {
+    height: 3.5em!important;
+    text-align: left;
+    overflow: hidden;
+    background: #46b4e5!important;
+}
+
+
