--- a/components/10/component.html
+++ b/components/10/component.html
@@ -4,23 +4,31 @@
 	<title>WSP Component: Michelle Munksgard</title>
 	<link rel="stylesheet" type="text/css" href="../../css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="component.css" />
+    <link rel="stylesheet" type="text/css" href="jquery-ui.min.css" />
+    <link rel="stylesheet" type="text/css" href="jquery-ui.structure.min.css" />
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,700,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
 	<!-- Component -->
     <section>
         <h1>Progress Control</h1>
-        <img src="" alt="Loader">
+        <div id="progressbar"></div>
+        
         <ul>
-            <li><button>Increment</button></li>
-            <li><button>Set to 1%</button></li>
-            <li><button>Set to 50%</button></li>
-            <li><button>Finish</button></li>
+            <li><a href="#increment" id="increment">Increment</a></li>
+            <li><a href="#1percent" id="1percent">Set to 1%</a></li>
+            <li><a href="#50percent" id="50percent">Set to 50%</a></li>
+            <li><a href="#finish" id="finish">Finish</a></li>
         </ul>
+        
     </section>
 	
 
 	<!-- End Component -->
-	
+    
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="jquery-ui.min.js"></script> 
+    <script src="progress.js"></script>
 </body>
 </html>
