--- a/components/2/component.html
+++ b/components/2/component.html
@@ -11,9 +11,9 @@
 	<!-- Component -->
     <section>
         <ul>
-            <li><a href="#find">Find Your Ride</a></li>
-            <li><a href="#powered">Become powered by iRide</a></li>
-            <li><a href="#manage">Manage your employees</a></li>
+            <li><a href="#find"><img src="images/driver.png" />Find Your Ride</a></li>
+            <li><a href="#powered"><img src="images/gear.png" />Become powered by iRide</a></li>
+            <li><a href="#manage"><img src="images/people.png" />Manage your employees</a></li>
         </ul>
     </section>
 	
