--- a/components/2/component.css
+++ b/components/2/component.css
@@ -29,35 +29,23 @@ section::after {
 }
 
 ul {
+    width: 100%;
     text-align: center;
 }
-
+    
 li {
     display: inline-block;
-    width: calc(100%/3);
+    margin-right: 4rem;
+    width: 100px;
+    height: 100px;
 }
-    
-li a {
-    padding-top: 12rem;
-    width: calc(100%/3);
-    display: block;
-}
+ 
 
 li a:hover {
     border-radius: 50%;
+    width: 150px;
+    height: 150px;
     background: rgba(31, 56, 186, .4);
     box-shadow: inset 0 0 0 5px rgba(31, 56, 186, .8);
 }
 
-a[href*="find"] {
-    background: url(images/driver.png) no-repeat center;
-}
-
-a[href*="powered"] {
-    background: url(images/gear.png) no-repeat center;
-}
-
-a[href*="manage"] {
-    background: url(images/people.png) no-repeat center;
-}
-    
