--- a/components/2/component.css
+++ b/components/2/component.css
@@ -33,7 +33,7 @@ ul {
     text-align: center;
 }
     
-li {
+li a {
     display: inline-block;
     margin-right: 4rem;
     width: 100px;
@@ -43,8 +43,6 @@ li {
 
 li a:hover {
     border-radius: 50%;
-    width: 150px;
-    height: 150px;
     background: rgba(31, 56, 186, .4);
     box-shadow: inset 0 0 0 5px rgba(31, 56, 186, .8);
 }
