--- a/components/3/component.html
+++ b/components/3/component.html
@@ -55,10 +55,10 @@
 
 <p>Make sure you add a copy to your bookshelf.</p>
                 <ul>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Pinterest</a></li>
-                    <li><a href="#">Google+</a></li>
+                    <li><a href="http://www.facebook.com">Facebook</a></li>
+                    <li><a href="http://www.twitter.com">Twitter</a></li>
+                    <li><a href="http://www.pinterest.com">Pinterest</a></li>
+                    <li><a href="http://www.google.com/+">Google+</a></li>
                     <li><p>8 Shares</p></li>
                     <li><p>Posted by Glenn on June 19, 2015</p></li>
 
